--- a/packages/helm-charts/blockscout/templates/blockscout-indexer.deployment.yaml
+++ b/packages/helm-charts/blockscout/templates/blockscout-indexer.deployment.yaml
@@ -35,12 +35,8 @@ spec:
       serviceAccountName: {{ .Release.Name }}-rbac
       terminationGracePeriodSeconds: {{ .Values.blockscout.indexer.terminationGracePeriodSeconds }}
       initContainers:
-      - name: "blockscout-init"
-        image: "groundnuty/k8s-wait-for:1.3"
-        imagePullPolicy: {{ .Values.blockscout.image.pullPolicy }}
-        args:
-          - job
-          - {{ .Release.Name }}-migration
+{{ include "celo.blockscout.initContainer.blockscout-init" . | indent 6 }}
+{{ include "celo.blockscout.initContainer.secrets-init" . | indent 6 }}
       containers:
       - name: blockscout-indexer
         image: {{ .Values.blockscout.image.repository }}:{{ .Values.blockscout.image.tag }}
@@ -90,8 +86,11 @@ spec:
         - name: METRICS_ENABLED
           value: "{{.Values.blockscout.metrics.enabled}}"
 {{- $data := dict "Release" .Release "Values" .Values "Database" .Values.blockscout.indexer.db }}
-{{ include "celo.blockscout-env-vars" $data | indent 8 }}
-{{ include "celo.blockscout-db-sidecar" $data | indent 6 }}
+{{ include "celo.blockscout.env-vars" $data | indent 8 }}
+{{ include "celo.blockscout.container.db-sidecar" $data | indent 6 }}
+      volumes:
+{{ include "celo.blockscout.volume.cloudsql-credentials" . | indent 8 }}
+{{ include "celo.blockscout.volume.temporary-dir" . | indent 8 }}
     {{- with .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
