--- a/packages/celotool/package.json
+++ b/packages/celotool/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.2.0",
     "ecurve": "^1.0.6",
     "ethereumjs-util": "^5.2.0",
+    "generate-password": "^1.5.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
